# FreedomNode

./: CONTRIBUTING.md  CONTRIBUTING.pt.md  FalconNode.csproj  FalconNode.sln  Program.cs  README.md  README.pt.md  run.ps1
.github/: copilot-instructions.md
.github/chatmodes/: csharpDocsInstructions.chatmode.md
.github/instructions/: docsCsharpInstructions.instructions.md
.github/workflows/: ci.yml  release.yml
Properties/: launchSettings.json
native/freedom_core/: .gitignore  Cargo.toml
native/freedom_core/src/: ffi.rs  lib.rs
native/freedom_core/src/crypto/: handshake.rs  helper.rs  identity.rs  mod.rs
native/freedom_core/src/protocol/: header.rs  mod.rs  packet.rs  tests.rs
src/Core/Crypto/: CryptoHelper.cs  OnionBuilder.cs
src/Core/Dht/: DhtMessages.cs  DhtService.cs  DhtStore.cs  MutableRecord.cs  NodeId.cs  RoutingTable.cs
src/Core/FS/: FileIngestor.cs  FileManifest.cs  FileRetriever.cs  FreedomNodeJsonContext.cs
src/Core/Interop/: RustCrypto.cs
src/Core/Messages/: HandshakePayload.cs  NetworkPacket.cs  OutgoingMessage.cs
src/Core/Network/: FixedHeader.cs  RequestManager.cs
src/Core/Security/: CertHelper.cs
src/Core/State/: PeerTable.cs  (+2 more)
src/Network/: FixedHeader.cs
src/UI/: TerminalUI.cs
src/Workers/: ConnectionManagerWorker.cs  NodeLogicWorker.cs  QuicListenerWorker.cs
tests/FreedomNode.Tests/: BlobStoreRetrieveToBufferTests.cs  BlobStoreTests.cs  CryptoHelperTests.cs  FixedHeaderTests.cs  FreedomNode.Tests.csproj  GlobalUsings.cs  HandshakePayloadTests.cs  NodeLogicWorkerTests.cs  OnionBuilderTests.cs  OnionMultiHopTests.cs
(+4 files in other folders)
