[package]
name = "freedom_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand = "0.8.5"
thiserror = "2.0.17"

chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
sha2 = "0.10.9"